--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -829,7 +829,7 @@ a.more-link{
 		}
 		.view-display-id-attachment_1{
 			border-bottom: 2px solid @color-text-purple;
-			padding-bottom: 30px;
+			padding-bottom: 15px;
 			padding-top: 20px;
 			margin-bottom: 20px;
 			.field-name-field-image{
@@ -845,6 +845,7 @@ a.more-link{
 			}
 			.more-link{
 				text-align: left;
+				margin-top: 5px;
 			}
 		}
 		.views-item-columns-container{
@@ -3806,7 +3807,8 @@ div[id ^= "mini-panel-partner_in_"], {
 
 			h3{
 				float: left;
-				padding-left: 2em;
+				padding-left: 0;
+				padding-right: 10px;
 				a{
 					pointer-events: none;
 				}
@@ -3832,6 +3834,7 @@ div[id ^= "mini-panel-partner_in_"], {
 					h3{
 						margin-top: 10px;
 						padding-left: 0;
+
 						a{
 							color: @color-text-grey;
 							font-weight: bold;
@@ -3868,12 +3871,17 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 
 		.flag{
-			width: 60px;
-			float: left;
-			margin-top: 15px;
-			position: absolute;
-			height: 41px;
+			width: 45px;
+			float: right;
+			margin-top: 22px;
+			position: relative;
+			height: 29px;
 			overflow: hidden;
+			right: 0;
+			img{
+				height: 100%;
+				width: 100%;
+			}
 		}
 
 		.views-row-2{
@@ -3887,17 +3895,6 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 	}
 }
-
-.page-sectorial-social-partners{
-	.view-partners-list{
-		.views-row-1{
-			.views-field.views-field-nothing{
-				border-top: 0;
-			}
-		}
-	}
-}
-
 
 
 .page-irat-network{
@@ -3939,8 +3936,9 @@ div[id ^= "mini-panel-partner_in_"], {
 		    font-weight: bold;
 		    font-style: italic;
 		    margin-top: 0;
-		    float: none;
-			padding-left: 2.5em;
+		    float: left;
+			padding-left: 0;
+			padding-right: 10px;
 		}
 
 		ul{
@@ -3948,12 +3946,17 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 
 		.flag{
-			width: 60px;
-			float: left;
-			margin-top: -48px;
-			position: absolute;
-			height: 41px;
+			width: 45px;
+			float: right;
+			margin-top: 2px;
+			position: relative;
+			height: 29px;
 			overflow: hidden;
+			right: 0;
+			img{
+				height: 100%;
+				width: 100%;
+			}
 		}
 
 		.views-row-2{
