--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -449,6 +449,14 @@ a.more-link{
 	}
 }
 
+.view-id-tools.view-display-id-block_2{
+	.field-name-field-tool-link{
+		a{
+			margin-top: 5px;
+		}
+	}
+}
+
 .searched-text{
 	font-family: "Oswald";
 	font-size: @font-size2-6;
@@ -1521,7 +1529,7 @@ a.more-link{
 				padding-top: 20px;
 				.views-item-columns-container{
 					background-color: @color-primary;
-					min-height: 558px;
+					min-height: 175px;
 					.views-field-field-image{
 						min-height: 202px;//testing
 						padding: 10px;
@@ -1535,6 +1543,7 @@ a.more-link{
 					.tool-teaser-content-wrapper{
 						padding: 15px;
 						overflow: hidden;
+						padding-bottom: 2em;
 						.field-name-related-partners{
 							.node-partner{
 								background-color: @color-primary-dark;
@@ -1560,6 +1569,9 @@ a.more-link{
 							a.more-link{
 								text-align: right;
 								margin-top: 15px;
+								bottom: 8px;
+    							position: absolute;
+    							right: 30px;
 							}
 							a.show-less{
 								text-align: right !important;
