--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -1,5 +1,21 @@
 @media only screen and (max-width : 991px) {
 
+
+.page-national-partners,
+.page-others-partners,
+.page-sectorial-social-partners{
+	.quicktabs-views-group {
+		.views-field.views-field-nothing {
+			.partner-content-label{
+				label{
+					font-size: 1.3rem;
+				}
+			}
+		}
+	}
+}
+
+
 /*HEADER
 ***********************************************/
 .top-header{
