MDR-3490 - Development - Reorganisation of OiRA partners page

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -3809,6 +3809,7 @@ div[id ^= "mini-panel-partner_in_"], {
 				float: left;
 				padding-left: 0;
 				padding-right: 10px;
+				width: 83%;
 				a{
 					pointer-events: none;
 				}
