--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10544,6 +10544,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   float: left;
   padding-left: 0;
   padding-right: 10px;
+  width: 83%;
 }
 .page-national-partners .quicktabs-views-group h3 a,
 .page-others-partners .quicktabs-views-group h3 a,
