--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1461,6 +1461,11 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 
 	.quicktabs-views-group{
 		padding: 0px 15px;
+
+		.views-field-field-flag{
+			margin-right: 1em;
+		}
+
 		.views-field.views-field-nothing{
 			padding: 1em;
 			.col-sm-2, .col-sm-5{
