--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1624,7 +1624,7 @@ a.more-link{
 			font-family: @font-family-base-2;
 			font-size: 1.4em;
 			font-weight: 300;
-			margin-bottom: 30px;
+			margin-bottom: 0;
 		}
 	}
 	.panels-flexible-row-last{
@@ -1967,7 +1967,7 @@ a.more-link{
 	}
 	.panels-flexible-row-first{
 		background:none !important;
-		padding-bottom:25px;
+		padding-bottom: 5px;
 	}
 }
 
@@ -2092,7 +2092,7 @@ a.more-link{
 		.field-type-text-with-summary{
 			font-family: 'Oswald';
 			font-size: 1.4em;
-			margin-bottom: 20px;
+			margin-bottom: 0;
 		}
 		.container{
 			position: relative;
@@ -2465,7 +2465,7 @@ a.more-link{
 	.field-type-text-with-summary {
 		font-family: 'Oswald';
 		font-size: 1.4em;
-		margin-bottom: 30px;
+		margin-bottom: 0;
 	}
 	.pane-oira-country-oira-country-count-all{
 		.pane-content{
@@ -3297,7 +3297,7 @@ div[id ^= "mini-panel-partner_in_"], {
 			font-family: 'Oswald';
 			font-size: 1.4em;
 			font-weight: 300;
-			margin-bottom: 30px;
+			margin-bottom: 0;
 		}
 	}
 	.panels-flexible-row-page-promotional-materials-1{
@@ -3349,7 +3349,7 @@ div[id ^= "mini-panel-partner_in_"], {
 			font-family: @font-family-base-2;
 			font-size: 1.4em;
 			font-weight: 300;
-			margin-bottom: 30px;
+			margin-bottom: 0;
 		}
 	}
 	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last{
@@ -3644,9 +3644,6 @@ div[id ^= "mini-panel-partner_in_"], {
 .page-sectorial-social-partners,
 .page-national-partners,
 .page-irat-network{
-	h1{
-		color: @color-text-grey;
-	}
 	.pane-node-body{
 		font-weight: bold;
 	}
@@ -4642,8 +4639,8 @@ div[id ^= "mini-panel-partner_in_"], {
 			margin: 0 auto;
 			padding-right: 15px;
 			padding-left: 15px;
-			margin-bottom: 30px;
-			margin-top: 40px;
+			margin-bottom: 15px;
+			margin-top: 0;
 			color: @color-text-purple;
 		}
 		@media only screen and (max-width : 991px) {
@@ -4671,7 +4668,7 @@ div[id ^= "mini-panel-partner_in_"], {
 		.esener-template{
 			.resume-section{
 				margin-top: 25px;
-				margin-bottom: 40px;
+				margin-bottom: 5px;
 				font-weight: bold;
 			}
 			> ul{
@@ -6794,4 +6791,17 @@ header.hide-header{
 #sliding-popup.sliding-popup-top{
 	z-index: 999999999999;
     position: fixed;
+}
+
+/*  MDR-3526 - Reduce the white heading around the introductory text */
+.page-header {	
+	margin: 0;
+}
+
+.panels-flexible-row{
+	padding-bottom: 0px;
+}
+
+.view-id-partners_list.view-display-id-block_1{
+	margin-top: 10px;
 }
