MDR-3541 - delete phone number from contact details for all partners

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -13539,7 +13539,11 @@ header.hide-header {
 .panels-flexible-row {
   padding-bottom: 0px;
 }
-.view-id-partners_list.view-display-id-block_1 {
+.node-type-partner .panels-flexible-row {
+  padding-bottom: 25px;
+}
+.view-id-partners_list.view-display-id-block_1,
+.view-id-partners_list.view-display-id-block_3 {
   margin-top: 10px;
 }
 /*FOOTER
