--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -6802,6 +6802,13 @@ header.hide-header{
 	padding-bottom: 0px;
 }
 
-.view-id-partners_list.view-display-id-block_1{
+.node-type-partner{
+	.panels-flexible-row{
+		padding-bottom: 25px;
+	}
+}
+
+.view-id-partners_list.view-display-id-block_1 ,
+.view-id-partners_list.view-display-id-block_3{
 	margin-top: 10px;
 }
