MDR-3552 - Remove the country from the other partners

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -15356,7 +15356,7 @@ header.hide-header {
   }
   .page-header {
     padding-bottom: 0px;
-    margin: 22px 0 11px;
+    margin: 0 0 11px;
   }
   h1.page-header {
     font-size: 2em;
