--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -182,8 +182,9 @@ h1{
 
 .page-header {
     padding-bottom: 0px;
-    margin: 22px 0 11px;
+    margin: 0 0 11px;
 }
+
 h1.page-header {
     font-size: 2em;
 }
