--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -6824,3 +6824,15 @@ header.hide-header{
 		}
 	}
 }
+
+
+/* Cookies banner */
+
+#sliding-popup.sliding-popup-top, #sliding-popup.sliding-popup-top .eu-cookie-withdraw-banner, .eu-cookie-withdraw-tab {
+    background: url('../images/background-cookies.png') repeat !important;
+    height: auto !important;
+    button{
+    	font-size: 11.5px;
+    }
+}
+
