--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-480.less
@@ -110,6 +110,13 @@
 		}
 	}
 
+
+	.node-type-partner{
+		div[id^="mini-panel-partner_in_"] .panels-flexible-row-inside-first{
+			flex-wrap: wrap;
+		}
+	}
+
 }
 
 
