--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -5,6 +5,22 @@
     padding-right: 15px;
 }
 
+.page-national-partners, .page-others-partners, .page-sectorial-social-partners{
+	.quicktabs-views-group{
+		.views-field.views-field-nothing{
+			.field-content{
+				display: block;
+				align-items: left;
+			}
+			.col-sm-2{
+				img{
+					margin: 0;
+				}
+			}
+		}
+	}
+}
+
 blockquote.image-field-caption {
     p{
 		max-width: 430px;
