--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -3902,6 +3902,7 @@ div[id ^= "mini-panel-partner_in_"], {
 			img{
 				height: 100%;
 				width: 100%;
+				border:1px solid #b9b8b8
 			}
 		}
 
