MDR-3612 - Partners logo display on OiRA website - Develompent

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1,16 +1,22 @@
 @media only screen and (max-width : 767px){
 
+
+.view.view-partners-list.view-display-id-block_2{
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
 .margin-line {
 	padding-left: 15px;
     padding-right: 15px;
 }
 
-.page-national-partners, .page-others-partners, .page-sectorial-social-partners{
+.page-national-partners, .page-others-partners, .page-sectorial-social-partners, .page-irat-network{
 	.quicktabs-views-group{
 		.views-field.views-field-nothing{
 			.field-content{
-				display: block;
-				align-items: left;
+				display: block !important;
+				align-items: left !important;
 			}
 			.col-sm-2{
 				img{
