--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -15251,19 +15251,25 @@ header.hide-header {
   }
 }
 @media only screen and (max-width: 767px) {
+  .view.view-partners-list.view-display-id-block_2 {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   .margin-line {
     padding-left: 15px;
     padding-right: 15px;
   }
   .page-national-partners .quicktabs-views-group .views-field.views-field-nothing .field-content,
   .page-others-partners .quicktabs-views-group .views-field.views-field-nothing .field-content,
-  .page-sectorial-social-partners .quicktabs-views-group .views-field.views-field-nothing .field-content {
-    display: block;
-    align-items: left;
+  .page-sectorial-social-partners .quicktabs-views-group .views-field.views-field-nothing .field-content,
+  .page-irat-network .quicktabs-views-group .views-field.views-field-nothing .field-content {
+    display: block !important;
+    align-items: left !important;
   }
   .page-national-partners .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 img,
   .page-others-partners .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 img,
-  .page-sectorial-social-partners .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 img {
+  .page-sectorial-social-partners .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 img,
+  .page-irat-network .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 img {
     margin: 0;
   }
   blockquote.image-field-caption p {
