--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1041,20 +1041,20 @@ a.more-link{
 			}
 			.field-name-related-partners{
 				.node-partner{
-					background-color: @color-primary-dark;
+					background-color: transparent;
 					padding: 15px;
-					color: @color-white;
+					color: #58585a;
 					margin-bottom: 15px;
 					h4{
 						min-height: 45px;
 						a{
 							font-size: @font-size0-9;
-							color: @color-white;
+							color: #58585a;
 							margin-top: 0px;
 						}
 					}
 					.more-link{
-						color: @color-white;
+						color: #58585a;
 						text-align: left;
 					}
 				}
