--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -8312,7 +8312,7 @@ a.more-link:before {
   padding-bottom: 2em;
 }
 .page-what-is-new .panels-flexible-row-last .panels-flexible-region .view-id-tools .views-item-columns-container .tool-teaser-content-wrapper .field-name-related-partners .node-partner {
-  background-color: #786586;
+  background-color: #FFF;
   padding: 15px;
   color: #ffffff;
   margin-top: 15px;
@@ -8322,7 +8322,7 @@ a.more-link:before {
 }
 .page-what-is-new .panels-flexible-row-last .panels-flexible-region .view-id-tools .views-item-columns-container .tool-teaser-content-wrapper .field-name-related-partners .node-partner h4 a {
   font-size: 0.9em;
-  color: #ffffff;
+  color: #58585a;
   margin-top: 0px;
 }
 .page-what-is-new .panels-flexible-row-last .panels-flexible-region .view-id-tools .views-item-columns-container .tool-teaser-content-wrapper .field-name-related-partners .node-partner .more-link {
