--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1559,7 +1559,7 @@ a.more-link{
 						padding-bottom: 2em;
 						.field-name-related-partners{
 							.node-partner{
-								background-color: @color-primary-dark;
+								background-color: #FFF;
 								padding: 15px;
 								color: @color-white;
 								margin-top: 15px;
@@ -1567,7 +1567,7 @@ a.more-link{
 									min-height: 45px;
 									a{
 										font-size: 0.9em;
-										color: @color-white;
+										color: #58585a;
 										margin-top: 0px;
 									}
 								}
