--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -7824,9 +7824,9 @@ a.more-link:before {
   line-height: 0;
 }
 #block-system-main .view-display-id-block_1 .views-item-columns-container .field-name-related-partners .node-partner {
-  background-color: #786586;
+  background-color: transparent;
   padding: 15px;
-  color: #ffffff;
+  color: #58585a;
   margin-bottom: 15px;
 }
 #block-system-main .view-display-id-block_1 .views-item-columns-container .field-name-related-partners .node-partner h4 {
@@ -7834,11 +7834,11 @@ a.more-link:before {
 }
 #block-system-main .view-display-id-block_1 .views-item-columns-container .field-name-related-partners .node-partner h4 a {
   font-size: 0.9em;
-  color: #ffffff;
+  color: #58585a;
   margin-top: 0px;
 }
 #block-system-main .view-display-id-block_1 .views-item-columns-container .field-name-related-partners .node-partner .more-link {
-  color: #ffffff;
+  color: #58585a;
   text-align: left;
 }
 #block-system-main .panels-flexible-region-new-oira_partners .panels-flexible-region-new-oira_partners-inside h3:after {
@@ -8312,7 +8312,7 @@ a.more-link:before {
   padding-bottom: 2em;
 }
 .page-what-is-new .panels-flexible-row-last .panels-flexible-region .view-id-tools .views-item-columns-container .tool-teaser-content-wrapper .field-name-related-partners .node-partner {
-  background-color: #786586;
+  background-color: #FFF;
   padding: 15px;
   color: #ffffff;
   margin-top: 15px;
@@ -8322,7 +8322,7 @@ a.more-link:before {
 }
 .page-what-is-new .panels-flexible-row-last .panels-flexible-region .view-id-tools .views-item-columns-container .tool-teaser-content-wrapper .field-name-related-partners .node-partner h4 a {
   font-size: 0.9em;
-  color: #ffffff;
+  color: #58585a;
   margin-top: 0px;
 }
 .page-what-is-new .panels-flexible-row-last .panels-flexible-region .view-id-tools .views-item-columns-container .tool-teaser-content-wrapper .field-name-related-partners .node-partner .more-link {
@@ -14173,7 +14173,7 @@ header.hide-header {
     display: none;
   }
   .page-what-is-new .panels-flexible-row-new-6 .panels-flexible-region-new-new_tools .view-id-tools .views-item-columns-container {
-    min-height: 591px;
+    min-height: 200px;
   }
   /*END WHAT'S NEW SECTION*/
   /*ARTICLES
