--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -13659,6 +13659,20 @@ header.hide-header {
   padding-right: 5px;
   padding-bottom: 14px;
 }
+.page-certificates h1 {
+  display: none;
+}
+.page-certificates .breadcrumb {
+  display: none;
+}
+.iframe-certificate {
+  width: 100%;
+  height: 580px;
+  padding-top: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
+  border: none;
+}
 /*FOOTER
 ********************************************/
 .site-footer {
@@ -13703,18 +13717,6 @@ header.hide-header {
 .site-footer .menu-block-2 .menu li {
   display: inline-block;
   margin-left: 10px;
-}
-.page-certificates h1,
-.page-certificates .breadcrumb {
-  display: none;
-}
-.iframe-certificate {
-  width: 100%;
-  height: 580px;
-  padding-top: 2em;
-  padding-left: 2em;
-  padding-right: 2em;
-  border: none;
 }
 @media only screen and (max-width: 1280px) {
   .page-eu-national-partners .view-id-countries .views-item-columns-container .views-field-field-flag {
