--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -6941,3 +6941,20 @@ header.hide-header{
 	}
 }
 
+.page-certificates{
+	h1{
+		display: none;
+	}
+	.breadcrumb {
+  		display: none;
+	}
+} 
+
+.iframe-certificate {
+  width: 100%;
+  height: 580px;
+  padding-top: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
+  border: none;
+}
